Отловлены баги с выбором доступных клеток. Необходимо переработать логику выбора размножения и движения. Сами методы движения и размножения работают правильно.